--- a/index.html
+++ b/index.html
@@ -2,31 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Website</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Welcome to My Website</h1>
-            <p>WEB開発の勉強を始めました。</p>
-        </div>
-    </header>
-
-    <main>
-        <div class="container">
-            <section class="about">
-                <h2>About Me</h2>
-                <p>こんにちは！これは私が初めて作ったWEBサイトです。これからプログラミングスキルを磨いて、色々なアプリケーションを作れるようになりたいと考えています。</p>
-            </section>
-        </div>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 My Portfolio Website</p>
-        </div>
-    </footer>
+    <h1>サイト作成中...</h1>
+    <p>現在、どんなサイトにするか企画中です！</p>
 </body>
 </html>
