--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Future Vision</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>サイト作成中...</h1>
-    <p>現在、どんなサイトにするか企画中です！</p>
+    <div class="hero">
+        <div class="content">
+            <p class="sub-title fade-in-up delay-1">COMING SOON</p>
+            <h1 class="main-title fade-in-up delay-2">FUTURE<br>VISION.</h1>
+            <p class="description fade-in-up delay-3">
+                デザインとテクノロジーの融合。<br>
+                新しい体験が、ここから始まります。
+            </p>
+        </div>
+        <div class="overlay"></div>
+    </div>
 </body>
 </html>
