--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Future Vision</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,12 +12,18 @@
 <body>
     <div class="hero">
         <div class="content">
-            <p class="sub-title fade-in-up delay-1">COMING SOON</p>
-            <h1 class="main-title fade-in-up delay-2">FUTURE<br>VISION.</h1>
+            <p class="sub-title fade-in-up delay-1">WEB DEVELOPER</p>
+            
+            <h1 class="main-title fade-in-up delay-2">HELLO<br>WORLD.</h1>
+            
             <p class="description fade-in-up delay-3">
-                デザインとテクノロジーの融合。<br>
-                新しい体験が、ここから始まります。
+                コードで世界を創造する。<br>
+                シンプルで力強いWEBサイトを作っています。
             </p>
+
+            <div class="btn-container fade-in-up delay-3">
+                <a href="#" class="btn">View More</a>
+            </div>
         </div>
         <div class="overlay"></div>
     </div>
